--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             </p>
             <ul class="socialLinks">
               <li>
-                <a target="_blank" href="//github.com/omof"><span class="fa-brands fa-github"></span></a>
+                <a target="_blank" href="https://github.com/SIBMARCEL/GestionFanClub"><span class="fa-brands fa-github"></span></a>
               </li>
               <li>
-                <a target="_blank" href="//linkedin.com"><span class="fa-brands fa-linkedin"></span></a>
+                <a target="_blank" href="https://www.linkedin.com/in/hoang-duy-le-638967265/"><span class="fa-brands fa-linkedin"></span></a>
               </li>
             </ul>
           </div>
