--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </label>
             </li>
             <li class="menu">
-              <label for="#works-card">
+              <label for="works-card">
                 <div class ="icon">
                 <span class="fa-solid fa-plane"></span>
                 </div>
@@ -661,7 +661,7 @@
       <div class="works-card right-cards">
         <div class="card-wrap">
           <div class="section-header">
-            <span class="header">Works</span>
+            <span class="header">Future Travel</span>
           </div>
           <div class="menu-list">
             <ul>
@@ -671,23 +671,19 @@
               </li>
               <li>
                 <input type="radio" name="menu-list" id="Link" />
-                <label class="coustom-menu" for="Link">Link</label>
+                <label class="coustom-menu" for="Europe">Europe</label>
               </li>
               <li>
                 <input type="radio" name="menu-list" id="Video" />
-                <label class="coustom-menu" for="Video">Video</label>
+                <label class="coustom-menu" for="Asia">Asia</label>
               </li>
               <li>
                 <input type="radio" name="menu-list" id="Music" />
-                <label class="coustom-menu" for="Music">Music</label>
+                <label class="coustom-menu" for="USA">USA</label>
               </li>
               <li>
                 <input type="radio" name="menu-list" id="Image" />
-                <label class="coustom-menu" for="Image">Image</label>
-              </li>
-              <li>
-                <input type="radio" name="menu-list" id="Gallery" />
-                <label class="coustom-menu" for="Gallery">Gallery</label>
+                <label class="coustom-menu" for="Best">Best of all</label>
               </li>
             </ul>
           </div>
@@ -703,8 +699,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">MotorCycle Helmate</a>
-                  <div class="cetagory">Gallery</div>
+                  <a href="#">Italy</a>
+                  <div class="cetagory">Europe</div>
                 </div>
               </div>
             </div>
@@ -717,8 +713,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">Architechture</a>
-                  <div class="cetagory">Gallery</div>
+                  <a href="#">Spain</a>
+                  <div class="cetagory">Europe</div>
                 </div>
               </div>
             </div>
@@ -731,8 +727,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">Social Website</a>
-                  <div class="cetagory">Link</div>
+                  <a href="#">Greece</a>
+                  <div class="cetagory">Europe</div>
                 </div>
               </div>
             </div>
@@ -745,8 +741,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">Mobile App</a>
-                  <div class="cetagory">Image</div>
+                  <a href="#">Korea</a>
+                  <div class="cetagory">Asia</div>
                 </div>
               </div>
             </div>
@@ -761,8 +757,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">Minimalisim Shape</a>
-                  <div class="cetagory">Video</div>
+                  <a href="#">Vietnam</a>
+                  <div class="cetagory">Asia</div>
                 </div>
               </div>
             </div>
@@ -777,8 +773,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">Staircase</a>
-                  <div class="cetagory">Music</div>
+                  <a href="#">Japan</a>
+                  <div class="cetagory">Asia</div>
                 </div>
               </div>
             </div>
@@ -791,8 +787,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">MotorCycle Helmate</a>
-                  <div class="cetagory">Gallery</div>
+                  <a href="#">Sicilia</a>
+                  <div class="cetagory">Europe</div>
                 </div>
               </div>
             </div>
@@ -807,8 +803,8 @@
                   </a>
                 </div>
                 <div class="dics">
-                  <a href="#">Geraal Travals</a>
-                  <div class="cetagory">Image</div>
+                  <a href="#">France</a>
+                  <div class="cetagory">Europe</div>
                 </div>
               </div>
             </div>
