logicial into software

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     <div class="icon">
                       <span class="fa fa-paint-brush"></span>
                     </div>
-                    <div class="name"><span>Logicial</span></div>
+                    <div class="name"><span>Software</span></div>
                   </div>
                   <div class="item">
                     <div class="item-list">
