--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <strong style="font-weight: 500;">Hello! I’m LE Hoang-Duy.</strong>
                     <br />
                     Full-Stack Developer from Lyon, France. I love computer science since I was young.
-                    <br>My dream is to be able to program with all the languages existing without hesitating and to
+                    <br>My dream is to be able to program with all the languages existing without hesitation and to
                     develop my own game.
                   </p>
                 </div>
@@ -171,10 +171,10 @@
                     <strong style="font-weight: 500;">When I was still in high school, I learned HTML + CSS, that's where I did my first Website and it was also the period where I played a lot.</strong>
                     <br />
                     Thanks to that my english improved and I'm able to understand almost everything and I can read & write pretty well.
-                    <br>After High school, I decided to continue in IT school to get my bachelor's degree and during my studies I chosed to specialize in programming.<br>
-                    Unfortunately I didn't get the degree and i gave up being IT developer. That's why I went to work as Seller afterwards but one day I realized that being Developer was more than a job, it was my passion.<br>
-                    So I did everything that I could to go back into it, And now few years later I am back and will start an apprenticeship for 2 years to finally get my bachelor's degree.<br>
-                    After that i want to continue in Ai developement for 2 more years to get a Master's degree.
+                    <br>After High school, I decided to continue in IT school to get my bachelor's degree and during my studies I chose to specialize in programming.<br>
+                    Unfortunately I didn't get the degree and i gave up being IT developer. That's why I went to work as seller afterwards but one day I realized that being developer was more than a job to me, it was my passion.<br>
+                    So I did everything that I could to go back into it. And now few years later, I am back and will start an apprenticeship for 2 years to finally get my bachelor's degree.<br>
+                    After that, I want to continue in Ai developement for 2 more years to get a Master's degree.
                   </p>
                 </div>
               </div>
