--- a/index.html
+++ b/index.html
@@ -836,8 +836,8 @@
                     FanClub Project
                   </a>
                   <div class="short-dics">
-                    This is an application developed with Java for the Back-end and ... for the Front-end.<br>
-                    It will allow Fans from many sports of different clubs to talk or debate of different topics.
+                    This is an application developed with Java for the Back-end and thymeleaf for the Front-end.<br>
+                    It will allow Fans from many sports of different clubs to talk or debate about different topics.
                   </div>
                 </div>
               </div>
